# runsteps

./: .cliff.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SCHEMA.md  dist-workspace.toml  oranda.json  runsteps.toml
.github/workflows/: ci.yml  release.yml  web.yml
docs/: examples.md
docs/adr/: 001-standalone-task-runner.md  002-placeholder-syntax.md
docs/migrations/: 0.2-no-deps.md
src/: config.rs  display.rs  executor.rs  graph.rs  history.rs  main.rs  picker.rs  preflight.rs  resolver.rs  schema.rs
tests/: again_tests.rs  args_tests.rs  cli_tests.rs  completions_tests.rs  deps_tests.rs  env_tests.rs  errors_tests.rs  executor_tests.rs  graph_tests.rs  init_tests.rs  integration_test.rs  list_tests.rs  parallel_tests.rs  profiles_tests.rs  schema_tests.rs
tests/common/: mod.rs
tests/e2e/: changelog_idempotency.sh
