[package]
name = "runsteps"
version = "0.1.3"
edition = "2024"
description = "Interactive config-driven task runner"
license = "MIT"
repository = "https://github.com/silafood/runsteps"
homepage = "https://runsteps.silafood.app"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.dist]
inherits = "release"

# cargo-release configuration:
# Run `cargo release 0.1.5 --execute` to bump version, commit, tag, and push.
# The tag push triggers the cargo-dist release workflow.
[package.metadata.release]
# We don't publish to crates.io — cargo-dist handles GitHub releases + Homebrew.
publish = false
# Tag format matches what release.yml expects: v0.1.5
tag-name = "v{{version}}"
# Push the tag (and commit) after creating them.
push = true
# Allow running from master (cargo-release defaults to refusing non-main branches).
allow-branch = ["master"]
