[package]
name = "runsteps"
version = "0.1.5"
edition = "2024"
description = "Interactive config-driven task runner"
license = "MIT"
repository = "https://github.com/silafood/runsteps"
homepage = "https://runsteps.silafood.app"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.15"
dirs = "5"
inquire = "0.9"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-escape = "0.1"
strsim = "0.11"
toml = "=0.8.23"

[profile.dist]
inherits = "release"

# cargo-release configuration:
# Run `cargo release 0.1.5 --execute` to bump version, commit, tag, and push.
# The tag push triggers the cargo-dist release workflow.
[package.metadata.release]
# We don't publish to crates.io — cargo-dist handles GitHub releases + Homebrew.
publish = false
# Tag format matches what release.yml expects: v0.1.5
tag-name = "v{{version}}"
# Push the tag (and commit) after creating them.
push = true
# Allow running from master (cargo-release defaults to refusing non-main branches).
allow-branch = ["master"]
# Auto-generate changelog entry before cutting a release tag. The hook
# self-installs git-cliff if it is missing so `cargo release` works on a
# fresh checkout or in CI without a preinstall step.
pre-release-hook = [
    "sh",
    "-c",
    "set -e; if ! command -v git-cliff >/dev/null 2>&1; then echo '==> installing git-cliff (one-time; ~2min compile)...' >&2; cargo install --locked git-cliff; fi; git-cliff --tag {{version}} --unreleased --prepend CHANGELOG.md",
]
